# chess_pgn

./: .envrc  .gitignore  .mcp.json  README.md  SKILL.md  SQL.md  main.py  pyproject.toml  requirements.txt
queries/: biggest_upsets.sql  clock_battle.sql  collapse_recovery.sql  color_gap_after_loss.sql  day_of_week.sql  day_time_combined.sql  draw_by_opening.sql  draw_by_rating.sql  eco_family.sql  first_move_speed.py  format_switching.sql  fresh_vs_repeat.sql  game_length_sweet_spot.sql  losing_streaks.sql  missed_mates.py  missed_mates_by_opening.sql  missed_mates_summary.sql  monthly_trend.sql  opening_loyalty.sql  openings_best.sql  openings_by_color.sql  openings_worst.sql  opponents_most_played.sql  opponents_toughest.sql  rating_anxiety.sql  rating_history.sql  rating_momentum.sql  rating_vs_opponent.sql  recent_games.sql  rematch_record.sql  rest_effect.sql  revenge_spiral.sql  session_fatigue.sql  streak_day_performance.sql  summary.sql  termination_breakdown.sql  tilt_detection.sql  time_of_day.sql  time_pressure.sql  time_pressure_monthly.sql  (+6 more)
queries/black_responses/: vs_d4_replies.sql  vs_e4_scandinavian.sql  vs_nf3_gap.sql
queries/checkmates/: checkmate_distribution.sql  checkmate_openings.sql  fastest_checkmates.sql  fastest_mated.sql  missed_mates_recent.sql
queries/general/: recent_games.sql  summary.sql
queries/icelandic_gambit/: icelandic_gambit_opp_rating.sql  icelandic_gambit_recent.sql  (+3 more)
scripts/: mcp_chess.sh
src/: cli.py  downloader.py  store.py
tests/: test_cli.py  test_downloader.py  test_queries.py  test_store.py
(+83 files in other folders)
