[project]
name = "chess-pgn"
version = "0.1.0"
description = "Download chess.com games as PGN"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["duckdb>=1.0.0"]

[project.scripts]
chess-pgn = "src.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
